# boilerplate

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
cmake/: FindCUDA.cmake  FindCaffe.cmake
src/: CMakeLists.txt
src/code/: caffe-modules.h  main.cpp  tensorflow-api.h  theano-api.h  vision.h
src/res/qml/: main.qml
